--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "next": "^8.0.1",
     "next-cookies": "^1.1.0",
     "react": "^16.7.0",
-    "react-dom": "^16.7.0"
+    "react-dom": "^16.7.0",
+    "react-google-login": "^5.0.2"
   }
 }
