--- a/package.json
+++ b/package.json
@@ -10,5 +10,20 @@
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-google-login": "^5.0.2"
+  },
+  "devDependencies": {
+    "husky": "^1.3.1",
+    "lint-staged": "^8.1.5"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{js,json,css,md}": [
+      "prettier --write",
+      "git add"
+    ]
   }
 }
