--- a/package.json
+++ b/package.json
@@ -16,6 +16,12 @@
     "husky": "^1.3.1",
     "lint-staged": "^8.1.5"
   },
+  "lint-staged": {
+    "*.{js,json,css,md}": [
+      "prettier --write",
+      "git add"
+    ]
+  },
   "husky": {
     "hooks": {
       "pre-commit": "lint-staged"
