--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "next-cookies": "^1.1.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
-    "react-google-login": "^5.0.2"
+    "react-google-login": "^5.0.2",
+    "styled-components": "^4.1.3"
   },
   "devDependencies": {
     "husky": "^1.3.1",
