--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "isomorphic-unfetch": "^3.0.0",
     "next": "^8.0.1",
     "next-cookies": "^1.1.0",
+    "prettier": "^1.16.4",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-google-login": "^5.0.2",
