--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "next-cookies": "^1.1.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
-    "react-google-login": "^5.0.2"
+    "react-google-login": "^5.0.2",
+    "reactstrap": "^7.1.0"
   },
   "devDependencies": {
     "husky": "^1.3.1",
