--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "express": "^4.16.4",
     "isomorphic-unfetch": "^3.0.0",
+    "js-cookie": "^2.2.0",
     "lint-staged": "^8.1.5",
     "next": "^8.0.1",
     "next-cookies": "^1.1.0",
