--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "reactstrap": "^7.1.0"
   },
   "devDependencies": {
+    "eslint": "^5.16.0",
     "husky": "^1.3.1",
     "lint-staged": "^8.1.5"
   },
