--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
     "dev": "node server.js"
   },
   "dependencies": {
+    "babel-eslint": "^10.0.1",
+    "eslint-plugin-react": "^7.12.4",
     "express": "^4.16.4",
     "isomorphic-unfetch": "^3.0.0",
     "js-cookie": "^2.2.0",
